--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   -->
   <table cellspacing="20">
     <tr>
-      <td> <img src="images\circle-cropped.png" alt="Kishanbagga pic" width="200" height="190"></td>
+      <td> <img src="https://media-exp1.licdn.com/dms/image/C5603AQHQTR8IVyAH4A/profile-displayphoto-shrink_400_400/0?e=1601510400&v=beta&t=gnDZ6-2BQOiF87HhLT5ceJwLWg7PC6ujT8O8GIqAXsQ" alt="Kishanbagga pic" width="200" height="190"></td>
       <td>
         <h1>Kishan Singh Bagga</h1>
         <p><em>Learning <strong> Web development</strong>.</em></p>
