--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   -->
   <table cellspacing="20">
     <tr>
-      <td> <img src="circle-cropped.jpg" alt="Kishanbagga pic" width="200" height="190"></td>
+      <td> <img src="circle-cropped.png" alt="Kishanbagga pic" width="200" height="190"></td>
       <td>
         <h1>Kishan Singh Bagga</h1>
         <p><em>Learning <strong> Web development</strong>.</em></p>
