--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   </table>
   <hr>
-  <p> Visit my Linkedin profile <strong><a href="https://in.linkedin.com/in/kishansinghbagga">here</a></strong>.</p>
+  <h3> Visit my Linkedin profile <strong><a href="https://in.linkedin.com/in/kishansinghbagga">here</a></strong>.</h3>
   <h2>Contact <a href="contact.html">here</a>
   </h2>
 
