--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kishanbagga</title>
 </head>
 
-<body background-color: #E6E6FA>
+<body background-color: #A2D5F2>
   <!--
   <img src="https://media-exp1.licdn.com/dms/image/C5603AQHQTR8IVyAH4A/profile-displayphoto-shrink_400_400/0?e=1601510400&v=beta&t=gnDZ6-2BQOiF87HhLT5ceJwLWg7PC6ujT8O8GIqAXsQ" alt="Minion pic">
   -->
