--- a/index.html
+++ b/index.html
@@ -1,97 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Kishanbagga</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KishanBagga</title>
 </head>
 
 <body style="background-color:LIGHTCYAN;">
-  <!--
-  <img src="https://media-exp1.licdn.com/dms/image/C5603AQHQTR8IVyAH4A/profile-displayphoto-shrink_400_400/0?e=1601510400&v=beta&t=gnDZ6-2BQOiF87HhLT5ceJwLWg7PC6ujT8O8GIqAXsQ" alt="Minion pic">
-  -->
-  <table cellspacing="20">
-    <tr>
-      <td> <img src="circle-cropped.png" alt="Kishanbagga pic" width="200" height="190"></td>
-      <td>
-        <h1>Kishan Singh Bagga</h1>
-        <p><em>Learning <strong> Web development</strong>.</em></p>
-        <p>I 🧡 watching and playing Cricket.</p>
-      </td>
-    </tr>
-  </table>
-  <hr size="9" noshade>
-  <h3>Education</h3>
-  <ul>
-    <li>10th - 91%</li>
-    <li>12th - 75%</li>
-  </ul>
-  <hr>
-  <h3>Hobbies</h3>
-  <ol type="i" start="1">
-    <li>Collection of Coins</li>
-    <li>Watching Stand-Ups </li>
-  </ol>
-  <hr>
-  <table cellspacing="10"  border="0">
-    <thead>
-      <tr>
-        <th>Skills</th>
-        <th>Level</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>C</td>
-        <td>Medium</td>
-      </tr>
-      <tr>
-        <td>CPP</td>
-        <td>Medium</td>
-      </tr>
-      <tr>
-        <td>HTML</td>
-        <td>Basic</td>
-      </tr>
-    </tbody>
-
-  </table>
-  <hr size="3">
+    <table cellspacing="20">
+        <td><img src="circle-cropped.png" alt="Kishanbagga pic" width="200" height="190"></td>
+        <td><h1>Kishan Singh Bagga</h1>
+            <p><em>Learning <strong> Web development</strong>.</em></p>
+            <p>I 💚 watching and playing Cricket.</p>
+        </td>
+    </table>
+    <hr>
+    <h3>Education</h3>
+    <ul>
+        <li>10th - 91%</li>
+        <li>12th - 75%</li>
+        <li>1st year (CGPA) - 9.6</li>
+    </ul>
+    <hr>
+    <a href="hobbies.html"><h3>My Hobbies</h3></a>
+    <hr>
+  
+  <!-- <hr size="3"> -->
   <h3>Skills</h3>
-  <table cellspacing="5">
+  <table cellspacing="10">
     <tr>
-      <td>
-        <table>
-          <tr>
-            <td>C</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>CPP</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>HTML</td>
-            <td>⭐</td>
-          </tr>
-          <tr>
-            <td>PYTHON</td>
-            <td>⭐⭐</td>
-          <tr>
-        </table>
-      </td>
+      <td>C</td>
+      <td>⭐⭐⭐</td>
     </tr>
-
+    <tr>
+      <td>CPP</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
   </table>
   <hr>
-  <h3> Visit my Linkedin profile <strong><a href="https://in.linkedin.com/in/kishansinghbagga">here</a></strong>.</h3>
-  <h2>Contact <a href="contact.html">here</a>
-  </h2>
-
+    <a href="contact.html"><h3>Contact me</h3></a>
+    <h3> Visit my Linkedin profile <strong><a href="https://in.linkedin.com/in/kishansinghbagga">here</a></strong>.</h3>
 </body>
 
 </html>
