--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>My email- kishansinghbagga@gmail.com </h3><br>
-    <form class="" action="mailto:amratbagga@gmail.com" method="post" enctype="text/plain">
+    <form class="" action="mailto:kishansinghbagga@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="Name: " value="">
       <br>
